src/test/ui/object-safety/object-safety-sized.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized.rs:12:30
   |
LL | trait Bar : Sized {
   |       ---   ----- ...because it requires `Self: Sized`
   |       |
   |       this trait cannot be made into an object...
...
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                              ^^^^^^^^ the trait `Bar` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
